--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,11 +101,12 @@ reth-node-builder = { git = "https://github.com/paradigmxyz/reth", features = [
 reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326", features = [
     "op",
 ] }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7" }
-reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7" }
-reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7", default-features = false, features = [
+reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326" }
+reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326" }
+reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326" }
+reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "9b86326", default-features = false, features = [
     "std",
 ] }
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "5f38ff7" }
