--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -18,6 +18,7 @@ reth-chainspec.workspace = true
 reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
+reth-payload-primitives.workspace = true
 reth-payload-util.workspace = true
 reth-evm.workspace = true
 reth-node-api.workspace = true
