feat: flashblocks metrics

--- a/crates/flashblocks/p2p/Cargo.toml
+++ b/crates/flashblocks/p2p/Cargo.toml
@@ -26,6 +26,7 @@ alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 thiserror.workspace = true
 parking_lot.workspace = true
+chrono.workspace = true
 
 [dev-dependencies]
 serde_json.workspace = true
