--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,6 +155,7 @@ alloy-primitives = { version = "1.3.0", default-features = false, features = [
     "rand",
     "arbitrary",
 ] }
+alloy-contract = { version = "1.0.30", default-features = false }
 alloy-rpc-types-eth = { version = "1.0.30", default-features = false }
 alloy-rpc-types = { version = "1.0.30", features = [
     "eth",
