--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,6 +155,7 @@ alloy-primitives = { version = "1.3.0", default-features = false, features = [
     "rand",
     "arbitrary",
 ] }
+alloy-contract = { version = "1.0.37", default-features = false }
 alloy-rpc-types-eth = { version = "1.0.37", default-features = false }
 alloy-rpc-types = { version = "1.0.37", features = [
     "eth",
@@ -234,6 +235,7 @@ ed25519-dalek = { version = "2", features = ["serde"] }
 sha2 = "0.10.9"
 url = "2.5.7"
 brotli = "8.0.2"
+once_cell = "1.19"
 
 # Test
 testcontainers = "0.23"
