--- a/crates/tests/sepolia/Cargo.toml
+++ b/crates/tests/sepolia/Cargo.toml
@@ -23,6 +23,7 @@ alloy-sol-types.workspace = true
 alloy-eips.workspace = true
 alloy-transport-http.workspace = true
 alloy-rpc-client.workspace = true
+alloy-contract.workspace = true
 
 reth-rpc-layer.workspace = true
 chrono.workspace = true
@@ -37,3 +38,4 @@ tracing-subscriber.workspace = true
 clap.workspace = true
 eyre.workspace = true
 futures.workspace = true
+once_cell.workspace = true
