--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -46,9 +46,10 @@ op-alloy-rpc-types-engine.workspace = true
 op-alloy-rpc-types.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-op-evm.workspace = true
-
+alloy-eip7928 = { workspace = true, features = ["rlp", "serde"] }
 flashblocks-primitives.workspace = true
 flashblocks-p2p.workspace = true
+
 
 # tokio
 tokio.workspace = true
@@ -66,4 +67,3 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 eyre.workspace = true
-
