--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "crates/flashblocks/payload",
     "crates/flashblocks/node",
     "crates/flashblocks/cli", 
+    "crates/flashblocks/bal", 
 ]
 default-members = [
     "crates/flashblocks/p2p",
@@ -46,6 +47,7 @@ lto = "fat"
 [workspace.lints]
 
 [workspace.dependencies]
+
 # Flashblocks
 flashblocks-node = { path = "crates/flashblocks/node" }
 flashblocks-p2p = { path = "crates/flashblocks/p2p" }
@@ -54,7 +56,7 @@ flashblocks-rpc = { path = "crates/flashblocks/rpc" }
 flashblocks-builder = { path = "crates/flashblocks/builder" }
 flashblocks-payload = { path = "crates/flashblocks/payload" }
 flashblocks-cli = { path = "crates/flashblocks/cli" }
-bal = { path = "crates/flashblocks/bal" }
+flashblocks-bal = { path = "crates/flashblocks/bal" }
 
 # Internal
 world-chain-node = { path = "crates/world/node" }
