--- a/crates/flashblocks/bal/Cargo.toml
+++ b/crates/flashblocks/bal/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "flashblocks-primitives"
+name = "flashblocks-bal"
 version.workspace = true
 edition.workspace = true
+rust-version.workspace = true
 license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [dependencies]
+flashblocks-p2p.workspace = true
+flashblocks-primitives.workspace = true
 
 thiserror.workspace = true
 serde.workspace = true
@@ -24,11 +29,9 @@ alloy-rpc-types-engine.workspace = true
 alloy-primitives.workspace = true
 alloy-serde.workspace = true
 alloy-rlp.workspace = true
-alloy-eip7928 = { workspace = true, features = ["rlp", "serde"] }
 
-op-alloy-consensus.workspace = true
+tokio.workspace = true
+futures.workspace = true
 
-blake3.workspace = true
-ed25519-dalek.workspace = true
-bytes.workspace = true
-chrono.workspace = true
+[lints]
+workspace = true
