--- a/crates/flashblocks/bal/Cargo.toml
+++ b/crates/flashblocks/bal/Cargo.toml
@@ -33,6 +33,6 @@ alloy-rlp.workspace = true
 tokio.workspace = true
 futures.workspace = true
 tokio-stream.workspace = true
-
+tracing.workspace = true
 [lints]
 workspace = true
