--- a/crates/flashblocks/primitives/Cargo.toml
+++ b/crates/flashblocks/primitives/Cargo.toml
@@ -23,6 +23,7 @@ alloy-rpc-types-engine.workspace = true
 alloy-primitives.workspace = true
 alloy-serde.workspace = true
 alloy-rlp.workspace = true
+alloy-eip7928.workspace = true
 
 op-alloy-consensus.workspace = true
 
