feat: parallelize state root computation & execution

--- a/crates/flashblocks/primitives/Cargo.toml
+++ b/crates/flashblocks/primitives/Cargo.toml
@@ -20,7 +20,7 @@ alloy-consensus.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-eth.workspace = true
 alloy-rpc-types-engine.workspace = true
-alloy-primitives.workspace = true
+alloy-primitives = { workspace = true, features = ["map-foldhash"] }
 alloy-serde.workspace = true
 alloy-rlp.workspace = true
 alloy-eip7928.workspace = true
