--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2"
 reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
 reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
 reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
+reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
 reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
 reth-ethereum = { git = "https://github.com/paradigmxyz/reth", features = [
     "network",
@@ -143,9 +144,7 @@ alloy-op-hardforks = { version = "0.3.5", default-features = false }
 
 # alloy
 alloy = { version = "1.0.37" }
-alloy-evm = { version = "0.21.2", default-features = false, features = [
-    "op"
-]}
+alloy-evm = { version = "0.21.2", default-features = false, features = ["op"] }
 alloy-json-rpc = { version = "1.0.37", default-features = false }
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-provider = { version = "1.0.37", default-features = false }
@@ -154,9 +153,10 @@ alloy-transport-http = { version = "1.0.37", default-features = false }
 alloy-transport = { version = "1.0.37", default-features = false }
 alloy-consensus = { version = "1.0.37", default-features = false }
 alloy-network = { version = "1.0.37", default-features = false }
-alloy-primitives = { version = "1.3.0", default-features = false, features = [
+alloy-primitives = { version = "1.3.1", default-features = false, features = [
     "rand",
     "arbitrary",
+    "map-foldhash",
 ] }
 alloy-contract = { version = "1.0.37", default-features = false }
 alloy-rpc-types-eth = { version = "1.0.37", default-features = false }
@@ -184,9 +184,10 @@ alloy-hardforks = { version = "0.3.0", default-features = false }
 
 # revm
 revm = { version = "29.0.1", default-features = false }
-revm-interpreter = { version = "27.0.0", default-features = false }
+revm-database = { version = "7.0.5", default-features = false }
+revm-interpreter = { version = "25.0.3", default-features = false }
 revm-state = { version = "7.0.5", default-features = false }
-revm-primitives = { version = "20.0.0", default-features = false }
+revm-primitives = { version = "20.2.1", default-features = false }
 op-revm = { version = "10.0.0", default-features = false }
 alloy-op-evm = { version = "0.21.2", default-features = false }
 
