--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -24,7 +24,7 @@ reth-rpc-eth-types.workspace = true
 reth-storage-api.workspace = true
 reth-node-builder.workspace = true
 reth-tasks.workspace = true
-revm.workspace = true
+reth-trie-common.workspace = true
 
 # op-reth
 reth-optimism-forks.workspace = true
@@ -51,6 +51,9 @@ alloy-evm.workspace = true
 flashblocks-primitives.workspace = true
 flashblocks-p2p.workspace = true
 
+# revm
+revm.workspace = true
+
 # tokio
 tokio.workspace = true
 
@@ -67,6 +70,7 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 eyre.workspace = true
+rayon.workspace = true
 
 [dev-dependencies]
 alloy-sol-types.workspace = true
