--- a/crates/flashblocks/node/Cargo.toml
+++ b/crates/flashblocks/node/Cargo.toml
@@ -76,3 +76,4 @@ brotli.workspace = true
 [dev-dependencies]
 reth-e2e-test-utils.workspace = true
 tracing-test.workspace = true
+tempfile.workspace = true
