--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -35,6 +35,9 @@ reth-optimism-forks.workspace = true
 reth-provider.workspace = true
 reth-transaction-pool.workspace = true
 reth-node-api.workspace = true
+reth-network.workspace = true
+reth-network-peers.workspace = true
+reth-eth-wire-types.workspace = true
 
 alloy-primitives.workspace = true
 alloy-rpc-types-eth.workspace = true
@@ -60,11 +63,13 @@ reth-db.workspace = true
 reth-e2e-test-utils.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
+reth-optimism-node = { workspace = true, features = ["test-utils"] }
 revm-primitives.workspace = true
 reth-basic-payload-builder.workspace = true
 reth-primitives.workspace = true
 reth-tracing.workspace = true
 reth-network-api.workspace = true
+reth-eth-wire.workspace = true
 alloy-rpc-types.workspace = true
 
 alloy-genesis.workspace = true
