--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -30,6 +30,7 @@ reth-transaction-pool.workspace = true
 reth-node-ethereum.workspace = true
 reth-revm.workspace = true
 reth-stages-types.workspace = true
+reth-network-peers.workspace = true
 
 alloy-consensus.workspace = true
 alloy-genesis.workspace = true
@@ -58,6 +59,7 @@ chrono.workspace = true
 rand.workspace = true
 tokio.workspace = true
 parking_lot.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
