--- a/Cargo.toml
+++ b/Cargo.toml
@@ -236,7 +236,7 @@ bon = "3.3.0"
 rayon = "1.10.0"
 auto_impl = "1"
 async-trait = "0.1.88"
-dashmap = "6.1.0"
+dashmap = { version = "6.1.0", features = ["rayon"] }
 tower = "0.5.0"
 arbitrary = { version = "=1.4.2", features = ["derive"] }
 blake3 = "1.8.2"
