--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -71,6 +71,7 @@ serde.workspace = true
 serde_json.workspace = true
 eyre.workspace = true
 rayon.workspace = true
+dashmap.workspace = true
 
 [dev-dependencies]
 alloy-sol-types.workspace = true
@@ -78,3 +79,4 @@ revm-interpreter.workspace = true
 alloy-genesis.workspace = true
 lazy_static.workspace = true
 alloy-signer-local.workspace = true
+
