--- a/crates/flashblocks/node/Cargo.toml
+++ b/crates/flashblocks/node/Cargo.toml
@@ -74,6 +74,7 @@ futures-util.workspace = true
 brotli.workspace = true
 
 [dev-dependencies]
+flashblocks-p2p = { workspace = true, features = ["test-utils"] }
 reth-e2e-test-utils.workspace = true
 tracing-test.workspace = true
 tempfile.workspace = true
