--- a/crates/flashblocks/p2p/Cargo.toml
+++ b/crates/flashblocks/p2p/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+test-utils = []
+
 [dependencies]
 flashblocks-primitives.workspace = true
 
@@ -19,6 +22,7 @@ ed25519-dalek.workspace = true
 metrics.workspace = true
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
+tokio-util = { workspace = true }
 eyre.workspace = true
 futures = { workspace = true }
 tracing.workspace = true
@@ -27,6 +31,4 @@ alloy-rlp.workspace = true
 thiserror.workspace = true
 parking_lot.workspace = true
 chrono.workspace = true
-
-[dev-dependencies]
-serde_json.workspace = true
+reth-tasks = { workspace = true }
