--- a/crates/flashblocks/primitives/Cargo.toml
+++ b/crates/flashblocks/primitives/Cargo.toml
@@ -27,6 +27,7 @@ alloy-eip7928.workspace = true
 
 op-alloy-consensus.workspace = true
 
+rayon.workspace = true
 blake3.workspace = true
 ed25519-dalek.workspace = true
 bytes.workspace = true
