--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -15,6 +15,7 @@ reth-chainspec.workspace = true
 reth-provider.workspace = true
 reth-primitives.workspace = true
 reth-transaction-pool.workspace = true
+reth-trie-common.workspace = true
 reth-payload-primitives.workspace = true
 reth-payload-util.workspace = true
 reth-evm.workspace = true
@@ -66,4 +67,3 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 eyre.workspace = true
-
