--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -78,6 +78,7 @@ alloy-eips.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-consensus.workspace = true
 
+op-alloy-rpc-types.workspace = true
 op-alloy-rpc-types-engine.workspace = true
 
 tokio-tungstenite.workspace = true
