--- a/Cargo.toml
+++ b/Cargo.toml
@@ -183,7 +183,7 @@ alloy-serde = { version = "1.0.11", default-features = false }
 alloy-hardforks = { version = "0.3.0", default-features = false }
 
 # revm
-revm = { version = "29.0.1", default-features = false }
+revm = { version = "29.0.0", default-features = false }
 revm-database = { version = "7.0.5", default-features = false }
 revm-interpreter = { version = "25.0.3", default-features = false }
 revm-state = { version = "7.0.5", default-features = false }
@@ -253,47 +253,88 @@ tracing-test = { version = "0.2", features = ["no-env-filter"] }
 
 lazy_static = "1.4"
 
-# WIP
+# [patch.crates-io]
+# revm = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-state = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-primitives = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-database = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-interpreter = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-precompile = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# revm-context-interface = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# op-revm = { git = "https://github.com/Soubhik-10/revm", branch = "bal" }
+# alloy-eips = { git = "https://github.com/Soubhik-10/alloy", branch = "bal" }
+# alloy-consensus = { git = "https://github.com/Soubhik-10/alloy", branch = "bal" }
+# alloy-rpc-types-eth = { git = "https://github.com/Soubhik-10/alloy", branch = "bal" }
+# alloy-rpc-types-engine = { git = "https://github.com/Soubhik-10/alloy", branch = "bal" }
+# alloy-hardforks = { git = "https://github.com/Rimeeeeee/hardforks", branch = "amsterdam" }
+# alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "bal" }
+
 # [patch."https://github.com/paradigmxyz/reth"]
-# reth = { path = "../../paradigmxyz/reth/bin/reth" }
-# reth-cli-util
-# reth-evm
-# reth-db
-# reth-db-api
-# reth-provider
-# reth-basic-payload-builder
-# reth-transaction-pool
-# reth-rpc-server-types
-# reth-prune-types
-# reth-trie
-# reth-chain-state
-# reth-chainspec
-# reth-eth-wire-types
-# reth-execution-types
-# reth-stages-types
-# reth-trie-db
-# reth-primitives-traits
-# reth-node-builder
-# reth-node-api
-# reth-payload-builder
-# reth-payload-builder-primitives
-# reth-payload-util
-# reth-payload-validator
-# reth-revm
-# reth-tasks
-# reth-primitives
-# reth-optimism-evm
-# reth-optimism-node
-# reth-optimism-cli
-# reth-optimism-rpc
-# reth-optimism-consensus
-# reth-optimism-chainspec
-# reth_payload_util
-# reth-optimism-payload-builder
-# reth-optimism-forks
-# reth-optimism-primitives
-# reth-e2e-test-utils
-# reth-consensus
-# reth-node-core
-# reth-tracing
-# reth-rpc-layer
+# reth = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-cli-util = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-cli = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-evm = { git = "https://github.com/Rimeeeeee/reth", branch = "bal", features = [
+#     "op",
+# ] }
+# reth-db = { git = "https://github.com/Rimeeeeee/reth", branch = "bal"}
+# reth-db-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-provider = { git = "https://github.com/Rimeeeeee/reth", branch = "bal", features = [
+#     "test-utils",
+# ] }
+# reth-basic-payload-builder = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-transaction-pool = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc-server-types = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc-eth-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc-eth-types = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-prune-types = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-trie = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-trie-common = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-chain-state = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-ethereum = { git = "https://github.com/Rimeeeeee/reth", features = [
+#     "network",
+# ], branch = "bal" }
+# reth-eth-wire = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-eth-wire-types = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-stages-types = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-trie-db = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-primitives-traits = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-node-builder = { git = "https://github.com/Rimeeeeee/reth", features = [
+#     "test-utils",
+# ], branch = "bal" }
+# reth-engine-local = { git = "https://github.com/Rimeeeeee/reth", branch = "bal", features = [
+#     "op",
+# ] }
+# reth-node-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-payload-builder = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-payload-primitives = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-payload-validator = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-revm = { git = "https://github.com/Rimeeeeee/reth", branch = "bal", default-features = false, features = [
+#     "std",
+# ] }
+# reth-tasks = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-chainspec = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc-engine-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-network = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-network-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-network-peers = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-primitives = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-evm = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-node = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-cli = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-rpc = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-consensus = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-chainspec = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth_payload_util = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-payload-builder = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-forks = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-primitives = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-e2e-test-utils = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-consensus = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-node-core = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-tracing = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-rpc-layer = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-node-ethereum = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-optimism-storage = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-storage-api = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
+# reth-op = { git = "https://github.com/Rimeeeeee/reth", branch = "bal" }
