--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -40,6 +40,7 @@ alloy-consensus.workspace = true
 alloy-rlp.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
+alloy-genesis.workspace = true
 alloy-eip7928.workspace = true
 op-alloy-consensus.workspace = true
 op-alloy-network.workspace = true
@@ -72,11 +73,10 @@ serde_json.workspace = true
 eyre.workspace = true
 rayon.workspace = true
 dashmap.workspace = true
+lazy_static.workspace = true
 
 [dev-dependencies]
 alloy-sol-types.workspace = true
 revm-interpreter.workspace = true
-alloy-genesis.workspace = true
-lazy_static.workspace = true
 alloy-signer-local.workspace = true
-
+reth-tracing.workspace = true
