--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -54,6 +54,7 @@ flashblocks-p2p.workspace = true
 
 # revm
 revm.workspace = true
+revm-database-interface.workspace = true
 
 # tokio
 tokio.workspace = true
