--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,12 +150,12 @@ jobs:
             target: x86_64-unknown-linux-gnu
             os: linux
             arch: x86_64
-            binary: world-chain-builder
+            binary: world-chain
           - runner: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
             os: linux
             arch: arm64
-            binary: world-chain-builder
+            binary: world-chain
     runs-on: ${{ matrix.runner }}
     steps:
     - uses: actions/checkout@v4
